Fixed column shifting in night mode

--- a/css/night.css
+++ b/css/night.css
@@ -136,7 +136,7 @@ td, #titleCell {
 }
 
 td, #descCell {
-  width: 55%;
+  width: 45%;
   text-align: center;
 }
 
@@ -150,13 +150,18 @@ td, #catCell {
   text-align: center;
 }
 
+td, #groupCell {
+  width: 10%;
+  text-align: center;
+}
+
 td, #title {
   width: 25%;
   text-align: left;
 }
 
 td, #desc {
-  width: 55%;
+  width: 45%;
   text-align: left;
 }
 
@@ -166,6 +171,11 @@ td, #mod {
 }
 
 td, #cat {
+  width: 10%;
+  text-align: center;
+}
+
+td, #group {
   width: 10%;
   text-align: center;
 }
